fix: hide scrollbars in text areas

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,13 @@
     src: url(/JetBrainsMono-Regular.ttf);
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
